--- a/src/content/posts/translations/alexandrian-hexcrawl-5e-4-navigation.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-5e-4-navigation.mdx
@@ -90,3 +90,13 @@ translator: Станислав "Drakzar" Иванов
 Незнакомые локации: незнакомые локации (даже те, в которых навигатор ранее бывал) находятся через проверку на столкновение.
 
 Другими словами, когда навигатор привел экспедицию в нужный гекс и было сгенерировано столкновение с локацией, это означает, что навигатор нашел то место, что искал. Экспедиции могут тратить время, чтобы намеренно обыскивать область для повышения шансов найти локации. Это будет описано в Части 7: Исследование гекса.
+
+---
+
+Также вам может быть интересно посмотреть на полный 
+[Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
+
