--- a/src/content/posts/translations/alexandrian-hexcrawl-5e-5-encounters.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-5e-5-encounters.mdx
@@ -141,3 +141,14 @@ translator: Станислав "Drakzar" Иванов
 По моему опыту таблица заранее созданных столкновений обычно заканчивается множеством лишней подготовки. Они также, по сути, одноразовы (случайное столкновение может быть использовано снова и снова с различными результатами; созданное же заранее конкретно и обычно не может повторяться).
 
 (Таблицы случайных столкновений также должны время от времени обновляться или изменяться – если персонажи истребили деревню гоблинов, это может привести к тому, что встреч с гоблинами больше не будет – но обычно это случается редко).
+
+
+---
+
+Также вам может быть интересно посмотреть на полный 
+[Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
+
