--- a/src/content/posts/translations/alexandrian-hexcrawl-5e-6-watch.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-5e-6-watch.mdx
@@ -133,3 +133,13 @@ translator: Станислав "Drakzar" Иванов
 Определите новый гекс (применив текущее отклонение к направлению движения экспедиции).
 
 Если они потерялись, сделайте проверку Навигации, чтобы понять, осознали ли они это. Если да, они могут попытаться сориентироваться. Если же нет, отклонение будет накапливаться (Заметка: использование компаса автоматически сбрасывает отклонение на границе гекса, даже если они не поняли, что сошли с курса).
+
+---
+
+Также вам может быть интересно посмотреть на полный 
+[Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
+
