--- a/src/content/posts/translations/alexandrian-hexcrawl-5e-design-3-additional-inspiration.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-5e-design-3-additional-inspiration.mdx
@@ -68,3 +68,13 @@ translator: Станислав "Drakzar" Иванов
 Дайте своему мозгу шанс вздохнуть свободно, а вашим творческим батареям – на перезарядку.
 
 И это, как бы вы ни старались придумать, исчерпывающий каталог или же четкая последовательность техник по описыванию гексов. Это просто вещи, что сработали для меня, когда я занимался этим.
+
+---
+
+Также вам может быть интересно посмотреть на полный 
+[Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
+
