--- a/src/content/posts/translations/alexandrian-hexcrawl-5e-mastering.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-5e-mastering.mdx
@@ -95,3 +95,13 @@ images/080522_2244_1.png
 
 (Вы можете свериться с Random GM Tip: Fistfuls of Dice ради других советов по броскам и интерпретации большого числа дайсов единовременно).
 
+
+---
+
+Также вам может быть интересно посмотреть на полный 
+[Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
+
