--- a/src/content/posts/translations/alexandrian-hexcrawl-5e-onefile.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-5e-onefile.mdx
@@ -22,3 +22,14 @@ tags:
 Специально для патронов Патреона собрал все статьи по гекскраулу в пятой редакции от Александриана в одном файле.
 
 Доступно по ссылке [https://www.patreon.com/posts/69271828](https://www.patreon.com/posts/69271828)
+
+
+---
+
+Также вам может быть интересно посмотреть на полный 
+[Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
+
