--- a/src/content/posts/translations/alexandrian-hexcrawl-5e-rumor-tables.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-5e-rumor-tables.mdx
@@ -166,3 +166,13 @@ C2 – РУКА ВИВЕРНЫ
 С точки зрения структуры, ключевой момент, о котором следует помнить, это то, что даже полностью ложный слух может, тем не менее, побудить персонажей пойти куда-нибудь или сделать что-то, что приведет к приключениям.
 
 Чего вы, однако, хотите избежать, так это постоянно предлагать им вознаграждение, а затем оставлять их ни с чем. Пока игроки получают надежно приятные впечатления от слухов (даже если слухи ложны), они будут продолжать следовать им. Однако если это перестанет быть правдой, игроки просто проигнорируют слухи, считая их хуже пустой тратой времени, и вся замечательная польза слухов будет для вас потеряна.
+
+---
+
+Также вам может быть интересно посмотреть на полный 
+[Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
+
