--- a/src/content/posts/translations/alexandrian-hexcrawl-5e-tools-distance.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-5e-tools-distance.mdx
@@ -49,3 +49,13 @@ translator: Станислав "Drakzar" Иванов
 Расчеты ниже отражают типичные обстоятельства с уровня земли. Если, к примеру, персонажи держат вахту на верхушке каменной башни, вполне возможно, что они заметят потенциальные угрозы с большей дистанции.
 
 ![image](https://cyborgsandmages.com/images/hexcrawl-5e-distance-3.jpg)
+
+---
+
+Также вам может быть интересно посмотреть на полный 
+[Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
+
