--- a/src/content/posts/translations/alexandrian-hexcrawl-5e-tools.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-5e-tools.mdx
@@ -81,3 +81,13 @@ translator: Станислав "Drakzar" Иванов
 Малые следы обычно требуют зоркого глаза, специальной тренировки или того и другого. Сюда входят множество следов из предыдущих категорий, но они более незаметны, иногда в результате того, что очень стары. Это слабые отпечатки лап на твердой земле, несколько уже полузасыпанных костей от убийства месячной давности или же наконечник орочьей стрелы в стволе дерева.
 
 Почти незаметные следы почти наверняка потребуют тренировки и опыта для того, чтобы их найти и правильно интерпретировать. Они также зачастую быстро исчезают. Это могут быть «сухости» (где прошедшее через утреннюю росу существо оставило «сухую» область, стряхнув воду с растительности), «засветы» (когда существо прошло сквозь траву и примяло ее, открыв светлую сторону) и другие до невероятного неуловимые следы (вроде отметин на листах).
+
+---
+
+Также вам может быть интересно посмотреть на полный 
+[Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
+
