--- a/src/content/posts/translations/alexandrian-hexcrawl-6.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-6.mdx
@@ -36,3 +36,13 @@ cover: ~assets/covers/the_alexandrian_splashes.png
 Если герои осознали блуждания, они могут попытаться повторно сориентироваться на местности;
 Если попытка ориентирования неудачна, определите для группы новое направление движения, согласно веерной диаграмме (cм. ч.3).
 Примечание: Использование компаса автоматически сбрасывает прогресс броска по диаграмме, даже в том случае, если герои не знают что заблудились.
+
+---
+
+Также вам может быть интересно посмотреть на полный 
+[Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
+
