--- a/src/content/posts/translations/alexandrian-hexcrawl-7.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-7.mdx
@@ -34,3 +34,13 @@ cover: ~assets/covers/the_alexandrian_splashes.png
 Здесь я предполагаю, что герои каждый день движутся в течение двух вахт и отдыхают в течение четырёх.
 5.Базовая скорость движения
 Описывает скорость движения группы. Просто возьмите скорость самого медленного из героев и укажите её здесь. 
+
+---
+
+Также вам может быть интересно посмотреть на полный 
+[Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
+
