--- a/src/content/posts/translations/alexandrian-hexcrawl-8.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-8.mdx
@@ -54,3 +54,13 @@ F15 – Скала черепа (у реки)
 Зона 9
 Прикованный к стене лич. Пурпурные молнии корчат его тело в муках непрерывного страдания. Примечание: Обратите внимание на пометку «у реки» в заголовке описания. Такая пометка говорит нам, что объект расположен у самого берега протекающего через гекс крупного водного потока. Следующие по берегу потока герои автоматически обнаружат описываемый объект.
 Карта этого подземелья взята мной на сайте Дайсона. Не могу не отметить, что его карты стали бесценным источником объектов для карты моей кампании, а в сети Internet существуют и другие блоггеры, выкладывающие свои бесплатные карты подземелий для бесплатного скачивания. Подобный вид готовых мини-подземелий представляется мне идеальным образцом такого описания объекта, которое ещё не требует перемещения в отдельную папку и может быть включено в общий перечень гексов.
+
+---
+
+Также вам может быть интересно посмотреть на полный 
+[Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
+
