--- a/src/content/posts/translations/alexandrian-hexcrawl-9.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-9.mdx
@@ -59,3 +59,14 @@ cover: ~assets/covers/the_alexandrian_splashes.png
 
 Вообще говоря, мой обычный метод подготовки (применяемый и для «Трацианского Hexcrawl») состоит в том чтобы установить некоторый статус-кво существовавший до момента появления героев. Когда же герои появляются на сцене и взаимодействуют с игровой средой, их действия вызывают каскад изменений статуса, рапространяющихся очень быстро и очень далеко. Однако, в случае отсутствия каких-либо действий со стороны героев, мир игры всегда стремится восстановить своё первоначальное состояние (и я уже касался этого вопроса в своём эссе «Не планируйте сюжеты!»). Подобный метод конечно же работает только тогда, когда у вас есть прочная и бесшовная базовая структуры для предоставления героям всеразличных сюжетных зацепок. В случае hexcrawl-кампании такой структурой служит сам Hexcrawl, дополняемый мной при помощи таблицы слухов. Преимущество метода статуса-кво состоит в уменьшении трудозатрат ведущего (ведь задача манипулирования двумя с половиной сотнями готовых гексов на практике до смешного проста). Этот метод также уменьшает непроизводительные затраты усилий (у вас нет необходимости постоянно отслеживать все-все фоновые события за пределами поля зрения героев). Однако, суть важно понимать, что выражение статус-кво означает далеко не скуку и далеко не бездействие игрового мира.
 Для примера, статус-кво в случае лагеря гоблинов-работорговцев не обозначает, что гоблины просто сидят ровно. Напротив, статус-кво здесь – непрерывный поток рабов, поступающих в лагерь и перепродающихся всем желающим.
+
+
+---
+
+Также вам может быть интересно посмотреть на полный 
+[Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
+
