--- a/src/content/posts/translations/alexandrian-hexcrawl-11.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-11.mdx
@@ -44,3 +44,14 @@ N7 – Древо Древнего Сыча
 Наконец, не бойтесь делать перерывы: посмотрите телевизор, почитайте книжку, пробегитесь по ещё не прочитанным игровым руководствам, включите ваш Play Station Дайте вашему уставшему мозгу возможность передохнуть, и вы увидите, как творческие способности сами-собой начнут восстанвливаться.
 И напоследок
 Напоследок замечу, что всё изложенное выше – далеко не полная палитра и не исчерпывающий каталог тех техник, можно использовать для составления легенды Hexcrawl—карты. Это всего-лишь список того, что лично я использовал при подготовке моей собственной трацианской кампании. %) 
+
+
+---
+
+Также вам может быть интересно посмотреть на полный 
+[Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
+
