--- a/src/content/posts/translations/alexandrian-hexcrawl-12.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-12.mdx
@@ -65,3 +65,14 @@ cover: ~assets/covers/the_alexandrian_splashes.png
 Найденные хижины оказываются заброшенными и абсолютно пустыми. Уже поздно, так что герои решают встать на ночёвку. Завтра они намереваются вернуться по собственным следам и попытаться понять где именно свернули не туда.
 В заключение
  Ну вот и всё. С достаточно хорошим описанием карты/гексов и чёткими процедурами/алгоритмами ваше путешествие будет протекать легко и естественно, всё глубже и глубже погружая ваших игроков в тайны неизведанных земель. Это была последняя статья в серии, и она сводит воедино все имеющиеся у меня соображения о практиках Hexcrawl. 
+
+ 
+---
+
+Также вам может быть интересно посмотреть на полный 
+[Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
+
