--- a/src/content/posts/translations/alexandrian-hexcrawl-3.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-3.mdx
@@ -68,3 +68,13 @@ cover: ~assets/covers/the_alexandrian_splashes.png
 Все другие встречи и события при такой специальной поверке не учитываться.
 Когда очевидно, что искомый объект отсутствует в пределах этого конкретного гекса, просто не делайте дополнительную на проверку, ведь ваши герои ищут нужную им вещь совсем не там.
 Примечание: Подобные дополнительные проверки показывают способность героев производит целенаправленный поиск, исходя из информации об искомом объекте, которой они обладают. Если никакой такой информации у них нет, то не производите дополнительные проверки. В качестве альтернативы: Если героям известно об искомом объекте нечто примечательное (и поиск объекта производится не в том месте), успешная дополнительная проверка может показать, что ищут они совсем не там.  
+
+---
+
+Также вам может быть интересно посмотреть на полный 
+[Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
+
