--- a/src/content/posts/translations/alexandrian-hexcrawl-4.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-4.mdx
@@ -67,3 +67,13 @@ cover: ~assets/covers/the_alexandrian_splashes.png
 19	|Дикий вепрь|	–	|25%|
 20|	Тиранозавр|	–	|50%|
 Примечание: обычно я сразу помечаю гексы, которые содержат / могут содержать логово того или иного типа существ. В дальнейшем, такие пометки подсказывают мне характер случайных встреч с существами соответствующего вида или вероятные причину появления / характер найденных следов.
+
+---
+
+Также вам может быть интересно посмотреть на полный 
+[Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
+
