--- a/src/content/posts/translations/alexandrian-hexcrawl-5.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-5.mdx
@@ -54,3 +54,14 @@ cover: ~assets/covers/the_alexandrian_splashes.png
 | Степи              | 6d6 x 40 футов        |
 | Болота             | 6d6 x 10 футов        |
 | Тундра             | 6d6 x 20 футов        |
+
+
+---
+
+Также вам может быть интересно посмотреть на полный 
+[Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
+
