--- a/src/content/posts/translations/alexandrian-ask9.mdx
+++ b/src/content/posts/translations/alexandrian-ask9.mdx
@@ -127,3 +127,14 @@ C. пишет:
 · Позволять убежать?
 
 Но тут мы уже немного отвлеклись от основной темы. Поэтому скажите, есть ли у вас примеры игроков, что занимаются описательным творчеством за столом и как вы разрешаете подобные заявки?
+
+
+---
+
+Также вам может быть интересно посмотреть на полный 
+[Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
+
