--- a/src/content/posts/translations/alexandrian-ask10.mdx
+++ b/src/content/posts/translations/alexandrian-ask10.mdx
@@ -61,3 +61,14 @@ A.M. задаёт вопрос:
 В подобных случаях я почти всегда принимаю сторону уходящего игрока. Мне кажется, гораздо более важно сделать так, чтобы у него был достойный финал; у нового ещё будет достаточно времени, чтобы получить интересующий его опыт от игры.
 
 Однако, если возможно, я всегда стараюсь вести новых и старых игроков одновременно. Это, по моему опыту, сделает переход гораздо более естественным с точки зрения его восприятия. Единственными причинами не делать так могут быть как проблемы взаимоотношений (возможно, что новичок будет вызывать ярость у уходящего игрока по тем или иным причинам) или же если введение нового персонажа займет столько времени, что у вас не хватит его на отличный эпилог для покидающего кампанию участника.
+
+
+---
+
+Также вам может быть интересно посмотреть на полный 
+[Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
+
