--- a/src/content/posts/translations/alexandrian-cons-of-dice-fudging.mdx
+++ b/src/content/posts/translations/alexandrian-cons-of-dice-fudging.mdx
@@ -57,3 +57,14 @@ _Ivonne Eógan Masson_
 Еще одну серую зону можно найти в процедуре по наполнению подземелий из изначальной редакции _Dungeons & Dragons_. Хоть правила и позволяли некоторую свободу Мастеру в деле распределения сокровищ и монстров, на строчку выше таблицы процедурной генерации, но механика была весьма запутанной и открытой для различных интерпретаций. Особенно это заметно в случае с бродячими монстрами из OD&D: проверка на случайную встречу чаще всего воспринимается современными Мастерами как момент процедурной генерации, тогда как в OD&D это была весьма прямо прописанная механика.
 
 _[Mythic Game Master Emulator](https://vk.com/away.php?to=https%3A%2F%2Fwww.drivethrurpg.com%2Fproduct%2F20798%2FMythic-Game-Master-Emulator%3Faffiliate_id%3D81207)_ – это еще один интересный пример: чтобы эмулировать роль ДМа, система _Mythic_ добавляет немало сдерживающих структур на основание в виде генераторов случайного контента. Но несмотря на создаваемые ею серые зоны, система все еще четко разделяет результаты механического разрешения действий и результаты эмулятора ДМа. Если вы хотите ясно понять, в чем заключается эта разница, потратьте вечер, играя с _Mythic_ в качестве основы для своей любимой игры – результат может быть весьма занимательным.
+
+
+---
+
+Также вам может быть интересно посмотреть на полный 
+[Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
+
