--- a/src/content/posts/translations/alexandrian-diapason-preparing.mdx
+++ b/src/content/posts/translations/alexandrian-diapason-preparing.mdx
@@ -125,3 +125,14 @@ _Когда караван объезжает подножие одного из
    
 
 _Источник: < [https://vk.com/@dungeonsandsuffering-diapazon-podgotovki](https://vk.com/@dungeonsandsuffering-diapazon-podgotovki)\>_
+
+
+---
+
+Также вам может быть интересно посмотреть на полный 
+[Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
+
