--- a/src/content/posts/translations/alexandrian-dont-15.mdx
+++ b/src/content/posts/translations/alexandrian-dont-15.mdx
@@ -90,3 +90,14 @@ cover: ~assets/covers/alexandrian-dont-15.jpg
 Именно поэтому я сказал, что вождение по рельсам – поломанная техника, которая только пытается исправить уже сломанный сценарий.
 
 Заблуждение тут – это вера в то, что не-сломанный сценарий невозможен (или плох, или непрактичен), так как ваш сломанный сценарий не работает.
+
+
+---
+
+Также вам может быть интересно посмотреть на полный 
+[Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
+
