--- a/src/content/posts/translations/alexandrian-exploration-invisible-pillar-of-5e.mdx
+++ b/src/content/posts/translations/alexandrian-exploration-invisible-pillar-of-5e.mdx
@@ -123,3 +123,14 @@ translator: Станислав "Drakzar" Иванов
 Надеюсь, что эта статья удовлетворила ваше любопытство относительно игры на базе исследования. Удачи в поиске своих собственных ответов на то, как включить его в свои приключения, а еще я желаю вам успеха в продолжении маршрута к новым и интересным стилям игры!
 
 (Вы поняли, что я только что сделал?)
+
+
+---
+
+Также вам может быть интересно посмотреть на полный 
+[Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
+
