--- a/src/content/posts/translations/alexandrian-fantastic-trees.mdx
+++ b/src/content/posts/translations/alexandrian-fantastic-trees.mdx
@@ -60,3 +60,14 @@ translator: Станислав "Drakzar" Иванов
 **Волновой кипарис:** Волновой кипарис – это бледно-синее дерево, что растет под поверхностью океана, обычно в прибрежных или около-прибрежных водах. Он никогда не гниет, что делает его особенно полезным в портах и для небольших лодок (ему не хватает крепости, необходимой для больших судов). И хотя для поверхностных жителей может быть сложным добывать его в больших количествах, волновой кипарис часто используются русалками и другими подводными расами.
 
 Заметка: Механики этой статьи были созданы под 3E.
+
+
+---
+
+Также вам может быть интересно посмотреть на полный 
+[Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
+
