--- a/src/content/posts/translations/alexandrian-index.mdx
+++ b/src/content/posts/translations/alexandrian-index.mdx
@@ -154,13 +154,13 @@ tags:
 
 3 [Исследование гексов в пятой редакции D&D - часть 3 - Действия во время смены](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-3-watch-actions)
 
-4
+4 [Исследование гексов в пятой редакции D&D - часть 4 - Навигация](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-4-navigation)
 
-5
+5 [Исследование гексов в пятой редакции D&D - часть 5 - Столкновения](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-5-encounters)
 
 6 [Исследование гексов в пятой редакции D&D - часть 6 - порядок действий в смену](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-6-watch)
 
-7
+7 [Исследование гексов в пятой редакции D&D - часть 7 - Непосредственное исследование гексов](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-7-hexploration)
 
 8
 
