--- a/src/content/posts/translations/alexandrian-index.mdx
+++ b/src/content/posts/translations/alexandrian-index.mdx
@@ -164,10 +164,27 @@ tags:
 
 8
 
-9
+9 [Инструменты исследования гексов: следы](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-tools)
 
 10
 
+11 [Дизайн исследования гексов. Часть 2: Подбор гексов](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrwal-5e-design-2-choice-of-hexes)
+
+12 [Дизайн исследования гексов. Часть 3: Дополнительное вдохновение](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-design-3-additional-inspiration)
+
+13 Дополнение к исследованию гексов: Специализированные таблицы столкновений
+
+1 [Инструмент для исследования гексов: Таблица слухов](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-rumor-tables)
+
+15 Инструмент для исследования гексов: Таблица слухов – Часть 2: Как узнать слухи
+
+16 Инструмент для исследования гексов: Таблица слухов – Часть 3: Восполнение вашей таблицы
+
+17 [Инструменты исследования гексов: Дальность обнаружения](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-tools-distance)
+
+18 [Дополнение к исследованию гексов: Свяжите ваши гексы](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-link-hexes)
+
+19 [Эррата на исследование гексов: Использование таблиц столкновений](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-errata-random-encounters)
 
 ## Цикл Случайный совет для Мастера
 
@@ -175,9 +192,9 @@ tags:
 
 Случайный совет для Мастера: Создание улик (Часть 2)
 
-Случайный совет для Мастера: Зачем вообще нужны столкновения в дикой местности?
+[Случайный совет для Мастера: Зачем вообще нужны столкновения в дикой местности?](https://cyborgsandmages.com/posts/translations/alexandrian-random-gm-tip-why-wilderness-encounters-is-needed)
 
-Случайный совет для Мастера: Так что же мы там делаем?
+[Случайный совет для Мастера: Так что же мы там делаем?](https://cyborgsandmages.com/posts/translations/alexandrian-random-gm-tip-what-are-we-doing)
 
 Случайный совет для Мастера: Вождение порталов
 
@@ -211,7 +228,7 @@ tags:
 
 Случайный совет для Мастера: Разделение партии
 
-8
+[Случайный совет для Мастера: Дистанция столкновений](https://cyborgsandmages.com/posts/translations/alexandrian-random-tips-distance-of-encounters)
 
 ## Цикл Искусство рулингов
 
@@ -293,19 +310,7 @@ tags:
 
 ## Прочее
 
-Дополнение к исследованию гексов: Специализированные таблицы столкновений
 
-Инструмент для исследования гексов: Таблица слухов
-
-Инструмент для исследования гексов: Таблица слухов – Часть 2: Как узнать слухи
-
-Инструмент для исследования гексов: Таблица слухов – Часть 3: Восполнение вашей таблицы
-
-[Инструменты исследования гексов: Дальность обнаружения](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-tools-distance)
-
-[Дополнение к исследованию гексов: Свяжите ваши гексы](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-link-hexes)
-
-[Эррата на исследование гексов: Использование таблиц столкновений](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-errata-random-encounters)
 
 [Ролевые игры против Повествовательных](https://cyborgsandmages.com/posts/translations/alexandrian-roleplaying-vs-storytelling)
 
