--- a/src/content/posts/translations/alexandrian-running-detectives-zero-result.mdx
+++ b/src/content/posts/translations/alexandrian-running-detectives-zero-result.mdx
@@ -44,3 +44,13 @@ cover: ~assets/covers/alexandrian-runing-detectives-zero-result.jpg
 Буду честен, в основе своей это не плохие инструменты как таковые. По факту они зачастую успешны в решение проблемы, для которой они были созданы, и лучше иметь, например, скучный сценарий, чем никакого. Также вполне возможно использовать такие техники в изменённом виде. К примеру, Brindlewood Bay – это повествовательная игра, созданная вокруг игроков, придумывающих разгадку для убийства, успешная по той причине, что а) она намеренно замещает удовольствие от разгадывания тайн их созданием и б) она механически навязывает нулевые результаты в форме провальных теорий, заставляя игроков создавать их заново. Аналогичным образом, дозволительный поиск улик – это форма импровизации улик, но с важной оговоркой, что вы делаете это так, что она соотносится с решением тайны.
 
 Но вернёмся к главному – вам не нужно выбирать между поломанным и скучными сценариями. Ведь есть методы создания крепких загадок, что сохранят и даже обогатят ваше приключение.
+
+---
+
+Также вам может быть интересно посмотреть на полный 
+[Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
+
