--- a/src/content/posts/translations/alexandrian-failure-for-the-beginning-gm.mdx
+++ b/src/content/posts/translations/alexandrian-failure-for-the-beginning-gm.mdx
@@ -1,5 +1,21 @@
-Неудача для начинающего гроссмейстера 10 апреля 2021 г.
+---
+title: "Неудача для начинающего Мастера "
+description: "Перевод статьи Александриана про неудачи начинающих мастеров #alexandrian #translate #rpg #gmtips"
+date: 2023-09-27
+tags:
+  - Alexandrian
+  - translate
+  - перевод
+  - Советы Мастеру
+  - неудача
+  - Начинающему Мастеру
+author: Justin Alexander  
+cover: ~assets/covers/failure-for-the-beginning-gm-1.jpg
+---
 
+Текст Justin Alexander от 10 апреля 2021 г.
+
+![Неудача для начинающего Мастера, изображение №1](ttps://cyborgsandmages.com/images/failure-for-the-beginning-gm-1.jpg.jpg)
 
 Самое замечательное в неудачах в ролевых играх то, что они провоцируют творчество, повышают ставки и направляют приключения в интересных направлениях.
 
@@ -19,7 +35,7 @@
 
 Если вы начинающий гроссмейстер и пытаетесь понять, как сделать неудачу значимой, вот несколько простых приемов, на которые вам стоит положиться.
 
-ВВЕДИТЕЛЬНАЯ ТЕХНИКА № 1: БЕЗ ПОВТОРНЫХ ПОПЫТКОВ
+## ВСТУПИТЕЛЬНАЯ ТЕХНИКА № 1: БЕЗ ПОВТОРНЫХ ПОПЫТКОВ
 
 Самый простой способ реализовать значимый отказ — просто запретить повторные попытки: если вам не удалось взломать замок на двери, эта неудачная проверка говорит нам, что вы никогда не сможете взломать этот замок. Ты сделал все что смог; это не сработало.
 
@@ -33,7 +49,7 @@
 
 Чтобы внести ясность, этот метод не является основным или конечным в том, как вынести решение о неудаче. Существуют более продвинутые или поэтапные методы, которые можно эффективно использовать на практике. Но если вы только начинаете, вам не нужно усложнять задачу.
 
-ВВЕДИТЕЛЬНАЯ ТЕХНИКА № 2: БЫСТРЫЙ И ГРЯЗНЫЙ ПРОДВИЖЕНИЕ ВПЕРЕД
+## ВСТУПИТЕЛЬНАЯ ТЕХНИКА № 2: БЫСТРОЕ И ГРЯЗНОЕ ПРОДВИЖЕНИЕ ВПЕРЕД
 
 Итак, вы сделали это в течение нескольких сессий и начинаете понимать, как выглядит значимая неудача в реальной игре, но вы также начинаете немного раздражаться под смирительной рубашкой, запрещающей повторные попытки.
 
@@ -46,38 +62,64 @@
 В нашем первом методе намеченный путь терпит неудачу, и игрокам приходится искать альтернативный путь. Провал вперед — это другой способ сделать неудачу значимой, поскольку вы не уничтожаете намеченный маршрут (независимо от того, подготовили ли вы его или игроки выбрали его). Вы только усложняете это.
 
 Однако придумывать на ходу интересные сложности может показаться пугающим. Итак, если вы сомневаетесь, просто назначьте цену: вы добились успеха, но…
+- Вы должны заплатить дополнительно.
+- Вы получили урон.
+- Ваше снаряжение сломалось.
+- Это заняло дополнительное время (если это актуально).
+- Кто-то знает, что ты это сделал, из тех, кто бы лучше оставался в неведении.
 
-Вы должны заплатить дополнительно.
-Вы получили урон.
-Ваше оборудование сломалось.
-Это заняло дополнительное время (если это актуально).
-Кто-то знает, что ты это сделал, но ты не хотел знать.
 Если у вас есть идея получше, отлично. Но если нет, то эти пять широких категорий могут охватывать около 90% проверок отказоустойчивости. На самом деле, у вас обычно будет несколько вариантов. Например, при вскрытии замка:
 
-Вы открываете дверь, но активируете охранную ловушку. (Вы получаете урон.)
-Вы открываете дверь, но отмычка сломалась в замке. (Ваше оборудование сломалось.)
-Вы открываете дверь, но на это ушло двадцать минут, и теперь у вас есть всего десять минут до возвращения графа домой. (Это заняло дополнительное время и было актуально.)
+- Вы открываете дверь, но активируете охранную ловушку. (Вы получаете урон.)
+- Вы открываете дверь, но отмычка сломалась в замке. (Ваше снаряжение сломалось.)
+- Вы открываете дверь, но на это ушло двадцать минут, и теперь у вас есть всего десять минут до возвращения графа домой. (Это заняло дополнительное время и было актуально.)
+- 
 Если ничего не работает и вы не можете придумать что-то нестандартное, это нормально: либо не делайте проверку вообще (просто позвольте им автоматически пройти успешно), либо вернитесь по умолчанию к запрету повторных попыток и двигайтесь вперед.
 
-Совет для продвинутых: здесь вы можете немного пофантазировать, используя технику в середине , предложив игроку стоимость. Например: «Вы почти открыли замок, но взломанная камера видеонаблюдения скоро снова включится. Ты останешься и откроешь дверь или GTFO до того, как камера заметит тебя?»
+>Совет для продвинутых: здесь вы можете немного пофантазировать, используя технику в середине , предложив игроку стоимость. Например: «Вы почти открыли замок, но взломанная камера видеонаблюдения скоро снова включится. Ты останешься и откроешь дверь или GTFO до того, как камера заметит тебя?»
 
-ВВОДНАЯ ТЕХНИКА №3: ОСНОВНЫЕ ЧАСЫ ПРОГРЕССА
+## ВСТУПИТЕЛЬНАЯ ТЕХНИКА №3: ОСНОВНЫЕ ЧАСЫ ПРОГРЕССА
 
 
 
 Индикатор прогресса — это простой и визуальный способ отслеживания того, насколько близок к достижению тот или иной результат. Существует много разных способов использования индикатора прогресса, но на сегодняшний день, когда персонажи проваливают первую проверку во время выполнения задания (например, проникновение в особняк, отслеживание банды орков, расследование деятельности культа в Двеределле):
 
+![Неудача для начинающего Мастера, изображение №2](ttps://cyborgsandmages.com/images/failure-for-the-beginning-gm-2.jpg.jpg)
+
 Создайте индикатор прогресса, нарисовав круг и разделив его на четыре, шесть или восемь частей.
-Установите существенное последствие или общее условие отказа. (Например, охрана особняка понимает, что есть злоумышленники, и поднимается тревога, персонажи теряют след орков и больше не могут следовать за ними, или культистам удается вызвать демона, который начинает неистовствовать на Большом рынке). )
+
+Установите существенное последствие или общее условие отказа. (Например, охрана особняка понимает, что есть злоумышленники, и поднимается тревога, персонажи теряют след орков и больше не могут следовать за ними, или культистам удается вызвать демона, который начинает неистовствовать на Большом рынке).
+
 Каждый раз, когда персонажи не проходят соответствующую проверку, заполните одну часть таймера прогресса.
+
 Когда индикатор выполнения заполнится, активируйте состояние последствия или сбоя.
 Этот метод можно использовать с любым типом проверки действий, но для наших целей в первую очередь он обеспечивает последствия по умолчанию для неудачной пересылки: если вы не можете придумать никаких других последствий, просто заполните следующий раздел индикатора выполнения и объясните связь. .
 
 Часы прогресса могут находиться в одном из трех состояний в этой таблице:
 
-Открытые часы : когда вы создаете часы или заполняете раздел, вы показываете их игрокам. Часто это самый простой метод, позволяющий без суеты ясно понять, каковы последствия неудачной проверки.
-Скрытый прогресс: Когда вы создаете часы, вы прямо или косвенно сообщаете игрокам, что они существуют. (Например, когда они пробираются в особняк, вы можете четко заявить, что существует риск, что служба безопасности их обнаружит.) Но сами часы остаются скрытыми. Игроки не знают, насколько велики часы и каков их прогресс. Однако, поскольку ход часов скрыт от них, вам необходимо будет четко сообщить им о последствиях неудачи. (Например, если они не смогли выполнить проверку на взлом, вы можете описать, как им удалось открыть дверь, но они оставили явные следы взлома, которые можно заметить. Такие объяснения, как вы заметите, также дадут информацию как именно происходит состояние неисправности – в этом случае возможно, что сработает сигнал тревоги, потому что кто-то заметил поврежденный замок.)
-Секретные часы : вы создаете часы, не сообщая игрокам о их существовании; он служит исключительно инструментом для отслеживания событий. Как и в случае со скрытыми часами прогресса, вы обязаны продолжать четко сообщать игрокам о последствиях неудачи в своем описании игрового мира.
-Совет для продвинутых №1: Другие события или действия могут заполнять разделы индикатора прогресса, даже если проверка не прошла неудачно. Если происходит что-то, что логически приближает события к результатам, показанным на индикаторе прогресса, заполните этот раздел. (Аналогично, особенно серьезные неудачи могут заполнять более одного раздела одновременно.)
+**Открытые часы:** когда вы создаете часы или заполняете раздел, вы показываете их игрокам. Часто это самый простой метод, позволяющий без суеты ясно понять, каковы последствия неудачной проверки.
 
-Совет для продвинутых №2: часы прогресса также могут идти «обратно». Например, если персонажи делают что-то, что отменяет планы культа, возможно, имеет смысл стереть одну из заполненных секций часов прогресса. (Аналогичным образом, часы прогресса не являются неизбежными: если персонажи врываются в особняк и выходят из него до того, как часы прогресса заполнятся, сигнал тревоги не звучит. Если они уничтожат культ, демон никогда не будет вызван. И поэтому вперед.)
+**Скрытый прогресс:** Когда вы создаете часы, вы прямо или косвенно сообщаете игрокам, что они существуют. (Например, когда они пробираются в особняк, вы можете четко заявить, что существует риск, что служба безопасности их обнаружит.) Но сами часы остаются скрытыми. Игроки не знают, насколько велики часы и каков их прогресс. Однако, поскольку ход часов скрыт от них, вам необходимо будет четко сообщить им о последствиях неудачи. (Например, если они не смогли выполнить проверку на взлом, вы можете описать, как им удалось открыть дверь, но они оставили явные следы взлома, которые можно заметить. Такие объяснения, как вы заметите, также дадут информацию как именно происходит состояние неисправности – в этом случае возможно, что сработает сигнал тревоги, потому что кто-то заметил поврежденный замок.)
+
+**Секретные часы:** вы создаете часы, не сообщая игрокам о их существовании; он служит исключительно инструментом для отслеживания событий. Как и в случае со скрытыми часами прогресса, вы обязаны продолжать четко сообщать игрокам о последствиях неудачи в своем описании игрового мира.
+
+<Aside>
+
+### Совет для продвинутых №1
+
+Другие события или действия могут заполнять разделы индикатора прогресса, даже если проверка не прошла неудачно. Если происходит что-то, что логически приближает события к результатам, показанным на индикаторе прогресса, заполните этот раздел. (Аналогично, особенно серьезные неудачи могут заполнять более одного раздела одновременно.)
+
+### Совет для продвинутых №2
+
+часы прогресса также могут идти «обратно». Например, если персонажи делают что-то, что отменяет планы культа, возможно, имеет смысл стереть одну из заполненных секций часов прогресса. (Аналогичным образом, часы прогресса не являются неизбежными: если персонажи врываются в особняк и выходят из него до того, как часы прогресса заполнятся, сигнал тревоги не звучит. Если они уничтожат культ, демон никогда не будет вызван. И поэтому вперед.)
+</Aside>
+
+---
+
+Также вам может быть интересно посмотреть на полный 
+[Перечень переводов Александриана на сайте Киборгов и Чародеев](https://cyborgsandmages.com/posts/translations/alexandrian-index)
+
+Вы найдете там немало полезной информации.
+
+Также стоит обратить внимание на [Перечень переводов Злого ГМ-а](https://cyborgsandmages.com/posts/translations/angrygm-index)
+
