--- a/src/content/posts/translations/alexandrian-random-gm-tip-to-overroll-dice.mdx
+++ b/src/content/posts/translations/alexandrian-random-gm-tip-to-overroll-dice.mdx
@@ -13,7 +13,7 @@ cover: ~assets/covers/alexandrian-random-gm-tip-overroll-dice.jpg
 ---
 Текст Justin Alexander от 13 апреля 2023 года
 
-[Случайный совет для Мастера: Забрасывание проверки дайсами, изображение №1](ttps://cyborgsandmages.com/images/alexandrian-random-gm-tip-overroll-dice.jpg)
+![Случайный совет для Мастера: Забрасывание проверки дайсами, изображение №1](ttps://cyborgsandmages.com/images/alexandrian-random-gm-tip-overroll-dice.jpg)
 
 **Томас:** Хорошо, я хотел бы осмотреть комнату.
 
