--- a/src/content/posts/translations/alexandrian-hexcrawl-5e-specialised-tables-of-encounters.mdx
+++ b/src/content/posts/translations/alexandrian-hexcrawl-5e-specialised-tables-of-encounters.mdx
@@ -58,7 +58,7 @@ translator: Станислав "Drakzar" Иванов
 
 Очевидно, что это увеличивает шанс на какое-либо событие, так что вы можете сделать проверку на столкновение, а затем случайным образом выбрать ту таблицу, по которой будете делать бросок (Киньте, например, 1d6. На 1-4 выбираете таблицу региона; на 5-6 – уже таблицу согласно методу путешествия группы).
 
-Однако броски по всем возможным таблицам могут быть отличным способом создания одновременных столкновений, что в свою очередь позволит вам комбинировать их любым возможным образом (как было описано в Часть 5: Столкновения).
+Однако броски по всем возможным таблицам могут быть отличным способом создания одновременных столкновений, что в свою очередь позволит вам комбинировать их любым возможным образом (как было описано в Ч[асть 5: Столкновения](https://cyborgsandmages.com/posts/translations/alexandrian-hexcrawl-5e-5-encounters)).
 
 ## Заметка дизайнера: Таблицы столкновений для отдельных гексов
 
