--- a/src/content/posts/translations/alexandrian-index.mdx
+++ b/src/content/posts/translations/alexandrian-index.mdx
@@ -390,6 +390,10 @@ Cypher v. Fate
 
 [Долина сапфировых волн – обновление 2023 года](https://cyborgsandmages.com/posts/translations/alexandrian-valley-of-the-sapphire-waves-2023-update)
 
+[Неудача для начинающего Мастера](https://cyborgsandmages.com/posts/translations/alexandrian-failure-for-the-beginning-gm)
+
+## Модуль статуса кампании
+
 Модуль статуса кампании: Корреспонденция
 
 Модуль статуса кампании: Обновление списков
